--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ body {
 
 .navi li {
   /* border: 2px solid rgb(38, 104, 25); */
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
+  float: left;
 }
 
 .navi li a {
@@ -180,7 +182,7 @@ body {
 }
 
 .main-header {
-  display: inline-block;
+  /* display: inline-block; */
   color: rgb(175, 175, 175);
   min-height: 70vh;
   background-color: rgb(243, 243, 243);
@@ -220,7 +222,7 @@ span {
 
 .main-work {
   min-height: 95vh;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   display: flex;
   margin-top: 45px;
 }
@@ -410,9 +412,10 @@ span {
   }
 
   .navi li > a {
+    flex-direction: row;
     background-color: white;
     padding-left: 60px;
-    padding-right: 100vw;
+    padding-right: 98vw;
     padding-bottom: 20px;
   }
 
@@ -486,7 +489,12 @@ span {
   }
 
   .main-header {
-    display: inline-block;
+    /* display: inline-block; */
+  }
+
+  .card-link img {
+    width: 100%;
+    height: 100%;
   }
 
   .main-about .about-specialities {
@@ -504,7 +512,14 @@ span {
     margin-top: 20px;
   }
 
-  .main-footer {
-    display: inline-block;
+  .main-footer p {
+    /* border: 4px solid rgb(6, 94, 165); */
+    margin: 0px 0 0 18px;
+    font-size: 20px;
+    margin-top: 45px;
+  }
+
+  .main-footer .call-to-action {
+    margin: 50px 0 0 18px;
   }
 }
