--- a/style.css
+++ b/style.css
@@ -155,18 +155,23 @@ body {
 }
 
 .navi {
-  /* border: 2px solid rgb(170, 34, 34); */
-  list-style-type: none;
-  margin-top: 40px;
-  margin-bottom: 4px;
-  margin-right: 60px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: ;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 1;
+}
+
+.nav > ul {
+}
+.nav > ul > li {
 }
 
 .navi li {
-  /* border: 2px solid rgb(38, 104, 25); */
-  /* display: inline-block; */
-  display: flex;
-  float: left;
 }
 
 .navi li a {
