--- a/style.css
+++ b/style.css
@@ -162,16 +162,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
   z-index: 1;
 }
 
-.nav > ul {
-}
-.nav > ul > li {
-}
-
 .navi li {
+  /* border: 2px solid rgb(38, 104, 25); */
+  /* display: inline-block; */
+  display: flex;
+  float: left;
 }
 
 .navi li a {
