--- a/style.css
+++ b/style.css
@@ -155,14 +155,11 @@ body {
 }
 
 .navi {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: ;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  /* border: 2px solid rgb(170, 34, 34); */
+  list-style-type: none;
+  margin-top: 40px;
+  margin-bottom: 4px;
+  margin-right: 60px;
 }
 
 .navi li {
@@ -410,16 +407,17 @@ span {
   }
 
   .navi {
-    margin-left: -50px;
-    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
   }
-
   .navi li > a {
-    flex-direction: row;
     background-color: white;
-    padding-left: 60px;
-    padding-right: 98vw;
-    padding-bottom: 20px;
   }
 
   li {
