--- a/style.css
+++ b/style.css
@@ -412,12 +412,13 @@ span {
     position: absolute;
     top: 60px;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     z-index: 1;
   }
   .navi li > a {
     background-color: white;
+    display: block;
   }
 
   li {
